--- a/volumes/dinocash/resources/lang/pt.json
+++ b/volumes/dinocash/resources/lang/pt.json
@@ -11,5 +11,10 @@
         "contact": "Telefone",
         "document": "CPF",
         "already-registered": "Já tem conta?"
+    },
+    "homepage": {
+        "play-now": "JOGAR AGORA",
+        "register-tip": " CADASTRE-SE E OBTENHA RODADAS GRÁTIS!",
+        "free-spin-before-register": "JOGADAS GRÁTIS DISPONÍVEIS APÓS O CADASTRO"
     }
 }
