--- a/volumes/dinocash/resources/lang/pt.json
+++ b/volumes/dinocash/resources/lang/pt.json
@@ -17,7 +17,7 @@
     },
     "homepage": {
         "play-now": "JOGAR AGORA",
-        "register-tip": " CADASTRE-SE E CONCORRA A RODADAS GRÁTIS!",
+        "register-tip": " Cadastre-se e ganhe 5 rodadas grátis.",
         "free-spin-before-register": "JOGADAS GRÁTIS DISPONÍVEIS APÓS O CADASTRO"
     },
     "nav": {
