--- a/volumes/dinocash/resources/lang/pt.json
+++ b/volumes/dinocash/resources/lang/pt.json
@@ -17,8 +17,8 @@
     },
     "homepage": {
         "play-now": "JOGAR AGORA",
-        "register-tip": " Cadastre-se e ganhe 2 rodadas grátis.",
-        "free-spin-before-register": "JOGADAS GRÁTIS DISPONÍVEIS APÓS O CADASTRO"
+        "register-tip": " Cadastre-se e concorra 2 rodadas grátis.",
+        "free-spin-before-register": "JOGADAS GRÁTIS DISPONÍVEIS APÓS O DEPÓSITO"
     },
     "nav": {
         "play": "JOGAR",
